fix- cropping of border in select flyout menu

--- a/src/components/select-component/SelectComponent.css
+++ b/src/components/select-component/SelectComponent.css
@@ -32,6 +32,7 @@
     display: flex;
     flex-direction: column;
     gap: 8px;
+    padding: 2px !important;
 }
 .Select div > div > div > button {
     border: 1px solid var(--ui-kit-color-border-active);
